--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-maps": "^1.13.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-vector-icons": "^10.0.3",
